--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+              "./node_modules/@fortawesome/fontawesome-free/css/all.css",
+              "src/sass/styles.scss"
             ],
             "scripts": []
           },
@@ -95,7 +96,7 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+              "src/sass/styles.scss"
             ],
             "scripts": []
           }
