Migrate tests to Jest

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "lint": "ng lint && npm run stylelint:lint && npm run html:lint",
     "fix": "ng lint --fix && npm run stylelint:fix && npm run html:fix",
     "stylelint:lint": "stylelint \"**/*.{scss,css}\"",
@@ -44,6 +45,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@mockoon/cli": "^1.2.0",
     "@types/jasmine": "~3.8.0",
+    "@types/jest": "^27.0.2",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
@@ -52,6 +54,8 @@
     "eslint-plugin-jest": "^25.2.2",
     "eslint-plugin-prettier": "^4.0.0",
     "jasmine-core": "~3.8.0",
+    "jest": "^27.3.1",
+    "jest-preset-angular": "^10.0.1",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
